# lang-chain-sql-and-test-generator

./: .gitignore  README.md  pyproject.toml
data/generated_outputs/sql/: etl.sql
genaidrivenetl/: config.py  logging_config.py  main.py  run_pipeline.py
genaidrivenetl/db/: init.sql  load_data.sql
genaidrivenetl/db/sample_data/: events.csv
genaidrivenetl/infrastructure/: file_storage.py
genaidrivenetl/llm/: client.py  orchestrator.py
genaidrivenetl/pipeline/: pipeline.py
genaidrivenetl/prompts/: test_generation.txt  transformation_generation.txt
genaidrivenetl/prompts/v1/: sql_prompt.txt  test_prompt.txt
scripts/: init_db.sh  run_all.sh  run_commit_views.sh  run_generated_tests.sh  run_main_pipeline.sh  run_validate_sql.sh
scripts/extra/: run_etl.sh
tests/: conftest.py  generated_tests.py  validate_generated_sql.py
